add get endpoints for dw
