# server/tableView.js
@@ -1,0 +1,116 @@
+const oracledb = require('oracledb');
+const router = require('express').Router();
+var credentials = require('./dbConnection.js');
+
+router.get("/pacients-dw", (req, res) => {
+  getAllPacients(res);
+});
+
+router.get("/hospitals-dw", (req, res) => {
+    getAllHospitals(res);
+});
+
+router.get("/doctors-dw", (req, res) => {
+  getAllDoctors(res);
+});
+
+router.get("/prescriptions-dw", (req, res) => {
+    getAllPrescriptions(res);
+});
+
+async function getAllPacients(res) {
+  let connection;
+
+  try {
+    connection = await oracledb.getConnection({ user: credentials.username, password: credentials.password, connectionString: credentials.connectionString, privilege: credentials.privilege })
+    console.log("Successfully connected to Oracle Database");
+
+    const result = await connection.execute(
+      `SELECT * FROM pacienti`,
+    );
+    res.json(result.rows);
+  } catch (err) {
+    console.error(err);
+  } finally {
+    if (connection) {
+      try {
+        await connection.close();
+      } catch (err) {
+        console.error(err);
+      }
+    }
+  }
+}
+
+async function getAllHospitals(res) {
+  let connection;
+
+  try {
+    connection = await oracledb.getConnection({ user: credentials.username, password: credentials.password, connectionString: credentials.connectionString, privilege: credentials.privilege })
+    console.log("Successfully connected to Oracle Database");
+
+    const result = await connection.execute(
+      `SELECT * FROM spitale`,
+    );
+    res.json(result.rows);
+  } catch (err) {
+    console.error(err);
+  } finally {
+    if (connection) {
+      try {
+        await connection.close();
+      } catch (err) {
+        console.error(err);
+      }
+    }
+  }
+}
+
+async function getAllDoctors(res) {
+  let connection;
+
+  try {
+    connection = await oracledb.getConnection({ user: credentials.username, password: credentials.password, connectionString: credentials.connectionString, privilege: credentials.privilege })
+    console.log("Successfully connected to Oracle Database");
+
+    const result = await connection.execute(
+      `SELECT * FROM doctori`,
+    );
+    res.json(result.rows);
+  } catch (err) {
+    console.error(err);
+  } finally {
+    if (connection) {
+      try {
+        await connection.close();
+      } catch (err) {
+        console.error(err);
+      }
+    }
+  }
+}
+async function getAllPrescriptions(res) {
+  let connection;
+
+  try {
+    connection = await oracledb.getConnection({ user: credentials.username, password: credentials.password, connectionString: credentials.connectionString, privilege: credentials.privilege })
+    console.log("Successfully connected to Oracle Database");
+
+    const result = await connection.execute(
+      `SELECT * FROM retete`,
+    );
+    res.json(result.rows);
+  } catch (err) {
+    console.error(err);
+  } finally {
+    if (connection) {
+      try {
+        await connection.close();
+      } catch (err) {
+        console.error(err);
+      }
+    }
+  }
+}
+
+module.exports = router;
